--- a/tex/MathsNotesBase.tex
+++ b/tex/MathsNotesBase.tex
@@ -167,6 +167,7 @@
 \newcommand{\inner}[2]{\langle #1,\, #2 \rangle}
 \newcommand{\congruent}[2]{\equiv #1 \modulo{#2}}
 \newcommand{\conj}[1]{\overline{#1}}
+\newcommand{\modulus}[1]{\abs{#1}} % semantic alias of \abs for complex conjugate
 
 
 \newcommand*{\V}[1]{\vec{\bm{#1}}}
