--- a/tex/Pure Mathematics.tex
+++ b/tex/Pure Mathematics.tex
@@ -15,6 +15,8 @@
 	
 	\searchableChapter{Algebra}{abstract algebra, complex numbers}\biggerskip
 	\subfile{"\algebraDir/Group Theory"}
+	\newpage
+	\subfile{"\algebraDir/Fields"}
 	\newpage	
 	\subfile{"\algebraDir/Matrices"}
 	\pagebreak
